# elman

./: .gitignore  BATCH_SIZE_TEST_REPRODUCIBLE.md  BUILD.md  CLAUDE.md  CUDA_EXECUTOR_PROMPT.md  CUDA_IMPLEMENTATION_SPEC.md  CUDA_KERNEL_PATTERNS.md  DELTA_RULE_UPDATES.md  DT_DISCRETIZATION_E1.md  E10_BATCH_SIZE_REPORT.md  E18_HAWARE_GATE.md  E19_SIMPLIFIED_GATE.md  E1_PARAMETERS_REFERENCE.md  E20_MAMBA2_INFORMED_ELMAN.md  E21_STRUCTURED_ELMAN.md  E22_PRACTICAL_UTM.md  E23_DUAL_MEMORY.md  E23_FAST_IMPLEMENTATION.md  E23_IMPLEMENTATION.md  E23_LITERATURE_REVIEW.md  E24_IMPLEMENTATION.md  E25_NOTES.md  E26_NOTES.md  E26_PARALLEL_EXPLORATION.md  E27_IMPLEMENTATION.md  E31_SPARSE_GATED.md  E34_E37_DESIGN.md  E38_E41_DESIGN.md  E42_DESIGN.md  E43_E55_DESIGN.md  E59_HIGHWAY_DESIGN.md  E5_EXPERIMENT_REPORT.md  E73_SIMPLIFICATION_ANALYSIS.md  E74_ABLATION_PLAN.md  E74_CUDA_DESIGN.md  E75_FIX_SUMMARY.md  E75_HANDOFF.md  E88_SCALING_STUDY_PLAN.md  ENTMAX_CUDA_IMPLEMENTATION.md  FAST_H_DEPENDENCE_VARIANTS.md  (+388 more)
.claude/: CLAUDE.md
.workgraph/: .gitignore  graph.jsonl
analysis/: self_gate_analysis.py  spectral_analysis.py
benchmark_results/: 0_steps.jsonl  100m_10min_summary.md  1_steps.jsonl  23_steps.jsonl  2_steps.jsonl  9_steps.jsonl  E88_500M_BENCHMARK_REPORT.md  E88_HEAD_SCALING_ANALYSIS.md  E88_STATE_SCALING_ANALYSIS.md  all_cmaes_results_backup.json  cmaes_best_results.json  cmaes_v2_partial_results.json  diagonal_steps.jsonl  e32_e33_comparison.json  e5_backends_20260105_190450.json  e5_backends_20260105_193832.json  e5_backends_20260105_195647.json  e88_warm_starts.json  (+12 more)
(+4185 files in other folders)
