[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elman"
version = "0.1.0"
description = "Elman Ladder: Systematic ablation from stock Elman to log-space RNNs"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Erik Garrison", email = "erik.garrison@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["rnn", "deep-learning", "pytorch", "cuda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout",
]

[project.urls]
Repository = "https://github.com/ekg/elman"

[tool.setuptools.packages.find]
where = ["."]
include = ["elman*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "gpu: mark test as requiring GPU",
    "cuda: mark test as requiring CUDA kernels",
    "slow: mark test as slow running",
]
